fixed modal overflow

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -4,6 +4,7 @@ html {
 
 * {
   color: var(--color-white);
+  scrollbar-width: thin;
 }
 
 body {
