--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -1,11 +1,15 @@
 .modal {
   position: fixed;
   inset: 0%;
+  height: calc(100% + 100px);
+  padding-bottom: 100px;
   background-color: rgba(0 0 0 / 0.5);
   backdrop-filter: blur(8px);
   z-index: 2;
   display: grid;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
 }
 
 .modal-inner {
